package Grafos;

public class Tripleta {
    private String s;
    private String p;
    private String o;

    public String getS(){
        return s;
    }

    public String getP(){
        return p;
    }

    public String getO(){
        return o;
    }

    public void setO(String o) {
        this.o = o;
    }

    public void setP(String p) {
        this.p = p;
    }

    public void setS(String s) {
        this.s = s;
    }
}